Alekhya, Praveen | #52 | Avoid break inside code sheet question

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -30,7 +30,7 @@ body {
     width: 85% !important;
     padding-left: 10px;
   }
-  .concept , .answer-column, .answer-row{
+  .concept , .answer-column, .answer-row, .code-sheet-question{
     page-break-inside: avoid !important;
   }
   .concept-set-section {
